# CppMisc

./: README.md
SimpleTest/: CMakeLists.txt  a.out  main.c  main.cpp
SimpleTest/src/: misc.cpp  misc.h
gflags_test/: CMakeLists.txt  gflags_demo  gflags_param.txt  main.cpp  others.cpp
ocrsdk-optimize/: CMakeLists.txt  auto_batch.cpp  main.cpp
